# LuisaCompute

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  README_Python.md  README_Python_en.md  README_Python_zh.md  README_python.md  ROADMAP.md  bootstrap.py  build.md  build_wheels.sh  build_wheels_linux.sh  build_wheels_macos.sh  gen_options.lua  luisa-compute.h  options.cmake.template  pyproject.toml  set_python_path.bat  set_python_path.ps1  set_python_path.sh  setup.lua  setup.py  update_intellisense.lua  xmake.lua  xmake_func.lua
src/: CMakeLists.txt  build_proj.lua  compute.h  generate_universal_header.py  luisa-compute.h  xmake.lua
src/api/: CMakeLists.txt  api.h  common.h  device.h  gen_remote_rpc_types.py  gen_rust_binding.py  generate_math_api.py  generate_python_library.py  language.cpp  language.h  logging.cpp  logging.h  math.cpp  math.h  runtime.cpp  runtime.h  type.cpp  type.h  view_export.h  xmake.lua
src/api-old/: CMakeLists.txt  language.cpp  language.h  logging.cpp  runtime.h
src/ast/: CMakeLists.txt  api.h  ast2json.cpp  ast_evaluator.cpp  ast_evaluator.h  atomic_ref_node.cpp  atomic_ref_node.h  callable_library.cpp  codegen.cpp  codegen.h  constant_data.cpp  constant_data.h  expression.cpp  expression.h  external_function.cpp  external_function.h  function.cpp  function.h  function_builder.cpp  function_builder.h  function_duplicator.cpp  function_serializer.cpp  function_serializer.h  interface.h  member_reflect.inl  member_reflect.inl.h  module.h  op.cpp  op.h  pch.h  statement.cpp  statement.h  type.cpp  type.h  type_registry.cpp  type_registry.h  usage.h  variable.cpp  variable.h  xmake.lua
src/backends/: CMakeLists.txt  xmake.lua
src/clangcxx/: .gitignore  CMakeLists.txt  ast.cpp  compiler.cpp  consumer.hpp  xmake.lua
src/compile/: CMakeLists.txt  codegen.cpp  codegen.h  continue_analysis.cpp  continue_analysis.h  cpp_codegen.cpp  cpp_codegen.h  definition_analysis.cpp  definition_analysis.cpp.backup  definition_analysis.h  spirv_translator.cpp  spirv_translator.h  xmake.lua
src/compute/: CMakeLists.txt
src/core/: CMakeLists.txt  allocator.cpp  allocator.h  arena.cpp  arena.h  atomic.h  basic_traits.h  basic_types.cpp  basic_types.h  binary_buffer.cpp  binary_buffer.h  binary_file_stream.cpp  binary_file_stream.h  binary_io.cpp  binary_io.h  binary_reader.cpp  binary_reader.h  clock.h  concepts.cpp  concepts.h  constants.h  context.cpp  context.h  data_types.h  dirty_range.cpp  dirty_range.h  dll_export.h  dynamic_dll.cpp  dynamic_dll.h  dynamic_module.cpp  dynamic_module.h  fiber.cpp  first_fit.cpp  first_fit.h  generate_swizzles.py  hash.cpp  hash.h  intrin.h  json.h  json_fwd.h  (+35 more)
src/dsl/: CMakeLists.txt  aabb.h  arg.h  atomic.cpp  atomic.h  autodiff.cpp  autodiff.h  buffer.h  buffer_view.h  builtin.cpp  builtin.h  constant.h  dispatch_indirect.cpp  dispatch_indirect.h  draw_indirect.h  dummy.cpp  expr.cpp  expr.h  expr_traits.h  func.cpp  func.h  generate_swizzles.py  image.cpp  image.h  local.cpp  local.h  operators.h  pch.h  polymorphic.cpp  polymorphic.h  printer.cpp  printer.h  ref.cpp  ref.h  resource.cpp  resource.h  shared.h  soa.cpp  stmt.h  stream.cpp  (+15 more)
src/dstorage/: binary_stream.cpp  dstorage.h  dstorage_interface.h  xmake.lua
src/ext/: CMakeLists.txt  dummy.cpp
src/gui/: CMakeLists.txt  framerate.cpp  framerate.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_window.cpp  imgui_window.h  input.h  window.cpp  window.h  xmake.lua
src/ir/: CMakeLists.txt  ast2ir.cpp  ast2ir.h  ast2json.cpp  codegen.cpp  codegen.cpp.backup  codegen.h  codegen.h.backup  ir.cpp  ir.h  ir.hpp  ir2ast.cpp  ir2ast.h  transform.cpp  xmake.lua
src/ir_v2/: CMakeLists.txt  ir.cpp  ir_v2_api.cpp  ir_v2_bindings.cpp  ir_v2_defs.cpp
src/meta/: CMakeLists.txt  property.h  s_expr.cpp  s_expr.h
src/osl/: CMakeLists.txt  hint.cpp  instruction.cpp  literal.cpp  osl_shader.cpp  oso_parser.cpp  shader.cpp  symbol.cpp  type.cpp  xmake.lua
src/py/: CMakeLists.txt  ast_evaluator.cpp  ast_evaluator.h  cbox_disney.py  disney.py  export_commands.cpp  export_dlpack.cpp  export_expr.cpp  export_gui.cpp  export_matrix.cpp  export_op.cpp  export_op.hpp  export_runtime.cpp  export_vector2.cpp  export_vector2.hpp  export_vector3.cpp  export_vector3.hpp  export_vector4.cpp  export_vector4.hpp  fractal.py  gen_mip.py  glass.py  image_util.cpp  lcapi.cpp  lrenderer.py  managed_accel.cpp  managed_accel.h  managed_bindless.cpp  managed_bindless.h  managed_collector.cpp  managed_collector.h  managed_device.h  mandelbrot.py  mpm3d.py  mpm88.py  parse_bindings.py  parseobj.py  pch.h  pt99.py  py_stream.cpp  (+15 more)
src/python/: CMakeLists.txt  ast.cpp  cmp_taichi.py  pyluisa.cpp  test_api.py  test_ast.py
src/raster/: depth_buffer.cpp  depth_buffer.h  depth_format.h  dsl.h  raster.cpp  raster_kernel.h  raster_scene.h  raster_shader.h  raster_state.h  vertex_attribute.h  viewport.h
src/rhi/: CMakeLists.txt  device_interface.cpp  device_interface.h  pixel_format.h  resource.cpp  texture_sampler.h
src/rtx/: CMakeLists.txt  accel.cpp  accel.h  geometry.cpp  geometry.h  hit.cpp  hit.h  mesh.cpp  mesh.h  option.h  procedural_primitive.cpp  procedural_primitive.h  ray.cpp  ray.h  ray_query.cpp  ray_query.h
src/runtime/: CMakeLists.txt  CommandReorderVisitor.cpp  CommandReorderVisitor.h  accel.cpp  accel.h  arguments.h  bindless_array.cpp  bindless_array.h  buffer.cpp  buffer.h  buffer_arena.h  byte_buffer.cpp  callable_library.cpp  cmd_encoder.cpp  cmd_encoder.h  command.cpp  command.h  command_buffer.cpp  command_buffer.h  command_encoder.cpp  command_encoder.h  command_graph.cpp  command_graph.h  command_group.cpp  command_group.h  command_list.cpp  command_list.h  command_reorder_visitor.cpp  command_reorder_visitor.h  command_scheduler.cpp  command_scheduler.h  context.cpp  context.h  context_paths.h  custom_pass.cpp  custom_pass.h  custom_struct.cpp  custom_struct.h  depth_buffer.cpp  depth_format.h  (+60 more)
src/rust/: .gitignore  CMakeLists.txt  Cargo.toml  ir.hpp  (+3 more)
(+5084 files in other folders)
